Om man klickar på order i körplaneringen så fylls nu även Operationen i automatiskt och ordern startar direkt

--- a/MainWindow/Main_Form.resx
+++ b/MainWindow/Main_Form.resx
@@ -1092,7 +1092,7 @@
   <metadata name="timer_Update_Körplanering.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1609, 19</value>
   </metadata>
-  <metadata name="timer_Check_Mätpunkter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="timer_Check_MeasurePoints.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1075, 19</value>
   </metadata>
   <metadata name="timer_Check_If_Maintenance_Has_Started.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
