--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1859,4 +1859,19 @@
   <data name="print_OutOfTolerance" xml:space="preserve">
     <value></value>
   </data>
+  <data name="changeProcesscard_Info_4" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="changeProtocol_Info_1" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="changeProtocol_Info_2" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="changeMeasureProtocol_Info_1" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="changeMeasureProtocol_Info_2" xml:space="preserve">
+    <value></value>
+  </data>
 </root>
