--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1868,4 +1868,7 @@
   <data name="changeMeasureProtocol_Info_2" xml:space="preserve">
     <value />
   </data>
+  <data name="label_InactiveProcesscard" xml:space="preserve">
+    <value></value>
+  </data>
 </root>
