Förbättra hur Zumbach sparar data. Tidigare loopade programmet igenom varje mätning och sparade en rad åt gången, nu kör det in allt i en bulk.
Förbättrat Spolning_PTFE samt Blandning_PTFE med mindre SQL-frågor när dom fyller i protokollet.

--- a/Properties/Resources.en-US.resx
+++ b/Properties/Resources.en-US.resx
@@ -2309,4 +2309,7 @@ Contact Admin if necessary.</value>
   <data name="btnZumbach" xml:space="preserve">
     <value>F6-Zumbach-measurement</value>
   </data>
+  <data name="label_InactiveProcesscard" xml:space="preserve">
+    <value>This Process card is inactive.</value>
+  </data>
 </root>
