--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1907,4 +1907,7 @@
   <data name="legendAverageLastOrder" xml:space="preserve">
     <value></value>
   </data>
+  <data name="col_CodeText_Header" xml:space="preserve">
+    <value></value>
+  </data>
 </root>
