--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1922,4 +1922,7 @@
   <data name="error_OrderNotOpen" xml:space="preserve">
     <value></value>
   </data>
+  <data name="Menu_Arkiv_UpdateDPP" xml:space="preserve">
+    <value></value>
+  </data>
 </root>
