--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1303,9 +1303,6 @@
   <data name="NewLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NewLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="DELETE_Order" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\delete_order.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
   <data name="dryingMaterial_3" xml:space="preserve">
     <value />
   </data>
@@ -1926,6 +1923,15 @@
     <value></value>
   </data>
   <data name="processcard_ChangeProdType" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="label_TotalMeasureMents" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="label_DiscardedMeasurements" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="top10LatestOrders" xml:space="preserve">
     <value></value>
   </data>
 </root>
