Om man hade fyllt i Utrustning på körprotokoll utan att bekfräta och sedan gick ut ur protokollet och klickade på Knappen F2 - Körprotokoll så raderaders utrustningen och man kunde bekräfta utrustningen utan data så den blev tom nästa gång man öppna den. Detta skedde pga att en ny instans öppnades av MainProtocol istället för att aktivera den gamla.

--- a/Properties/Resources.en-US.resx
+++ b/Properties/Resources.en-US.resx
@@ -2385,4 +2385,7 @@ Please contact IT support if the issue persists.</value>
   <data name="Menu_Order_ReadProposedProcesscardChanges" xml:space="preserve">
     <value>View proposed process card updates for this order.</value>
   </data>
+  <data name="orderNotOpen" xml:space="preserve">
+    <value>No open Order.</value>
+  </data>
 </root>
